--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
   "description": "A light foundation for your next frontend project based on webpack.",
   "scripts": {
     "lint": "npm run lint:styles; npm run lint:scripts",
-    "lint:styles": "stylelint src",
     "lint:scripts": "eslint src",
     "build": "cross-env NODE_ENV=production webpack --config webpack/webpack.config.prod.js",
     "start": "webpack serve --config webpack/webpack.config.dev.js"
@@ -13,14 +12,6 @@
     "type": "git",
     "url": "git+https://github.com/wbkd/webpack-starter.git"
   },
-  "keywords": [
-    "webpack",
-    "startkit",
-    "frontend",
-    "es6",
-    "javascript",
-    "webdev"
-  ],
   "author": "webkid.io",
   "license": "MIT",
   "bugs": {
@@ -31,6 +22,7 @@
     "@babel/plugin-proposal-class-properties": "^7.12.1",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@babel/preset-env": "^7.12.7",
+    "autoprefixer": "^10.2.6",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
@@ -44,12 +36,14 @@
     "html-webpack-plugin": "^4.5.0",
     "mini-css-extract-plugin": "^1.3.2",
     "node-sass": "^5.0.0",
+    "postcss": "^8.3.4",
     "postcss-loader": "^4.1.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "stylelint": "^13.8.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-webpack-plugin": "^2.1.1",
+    "tailwindcss": "^2.1.4",
     "webpack": "^5.10.0",
     "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0",
