--- a/package.json
+++ b/package.json
@@ -40,9 +40,6 @@
     "postcss-loader": "^4.1.0",
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
-    "stylelint": "^13.8.0",
-    "stylelint-config-standard": "^20.0.0",
-    "stylelint-webpack-plugin": "^2.1.1",
     "tailwindcss": "^2.1.4",
     "webpack": "^5.10.0",
     "webpack-cli": "^4.2.0",
@@ -51,6 +48,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
-    "core-js": "^3.8.1"
+    "core-js": "^3.8.1",
+    "gsap": "^3.7.0"
   }
 }
